<resources>
    <string name="app_name">ViralCam</string>

    <string name="select_background_button">Select background picture</string>
    <string name="take_picture_button">Take picture</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_take_picture">TakePictureActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_draw_trimap">DrawTrimapActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="picture">picture</string>
    <string name="description_info">description</string>
    <string name="request_permission">permission request</string>
    <string name="intro_message">intro message</string>
    <string name="title_activity_home_screen">home screen</string>
    <string name="dummy">foo</string>
    <string name="loading">Processing…</string>

    <string name="smudge">Smudge</string>
    <string name="background">Background</string>
    <string name="foreground">Foreground</string>
    <string name="clear">Clear</string>
    <string name="title_activity_test_sanbox">TestSanboxActivity</string>
    <string name="select_background">Select background</string>
    <string name="title_activity_capture_scene">CaptureSceneActivity</string>


    <string name="changelog_dialog_title">What\'s new in %1$s</string>
    <string name="changelog_dialog_text"><![CDATA[
        <h3>Features</h3>
        <ul>
            <li>What\'s new dialog will be shown after update when you start application.</li>
        </ul>
        <ul>
            <li>Redesign
            </li>
        </ul>
        <ul>
            <li>Swap between front facing and rear camera
            </li>
        </ul>
        <ul>
            <li>Swap foreground and background image
            </li>
        </ul>
        <hr/>
        <h3>Fixed bugs</h3>
        <ul>
            <li>Kitkat (and lover) devices had problems with taking pictures on portrait mode.
                Please let me know if the problem persists.
            </li>
        </ul>
        ]]></string>
    <string name="title_activity_introduction">Introduction</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="capture_scene_button_description">capture scene</string>
    <string name="select_button_button_description">select image</string>
    <string name="title_activity_ripple_test">RippleTest</string>
    <string name="title_activity_matting_evaluation">Matting Evaluation</string>
    <string name="title_activity_compute_shader">Compute shader</string>

</resources>
