<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.salat.viralcam.app.activities.TrimapActivity"
    android:background="#000000" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/dummy"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitStart"/>

    <com.salat.viralcam.app.views.DrawTrimapView
        android:visibility="invisible"
        android:id="@+id/drawTrimapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/button_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@android:drawable/ic_menu_share" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/button_magic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_star" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/button_editing_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_magic"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        fab:menu_icon="@drawable/ic_edit"
        fab:menu_colorNormal="#43A047"
        fab:menu_colorPressed="#2E7D32"
        fab:menu_colorRipple="#1B5E20"
        fab:menu_labels_maxLines="1"
        fab:menu_labels_ellipsize="end"
        fab:menu_fab_show_animation="@anim/fab_scale_up"
        fab:menu_fab_hide_animation="@anim/fab_scale_down">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/button_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            fab:fab_label="@string/background"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/button_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            fab:fab_label="@string/foreground"
            fab:fab_size="mini"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            fab:fab_label="@string/clear"
            fab:fab_size="mini"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/button_clever"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            fab:fab_label="@string/smudge"
            fab:fab_size="mini"/>
    </com.github.clans.fab.FloatingActionMenu>

    <ImageButton
        android:id="@+id/done_button"
        android:src="@drawable/ic_check_circle_white_48dp"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginRight="24dp"
        android:scaleType="centerCrop"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/capture_scene_button_description"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />

    <!--android:background="@android:color/transparent"-->
    <ImageButton
        android:id="@+id/swap_images_button"
        android:src="@drawable/ic_swap_horiz_white_48dp"
        android:visibility="invisible"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginRight="24dp"
        android:scaleType="centerCrop"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/capture_scene_button_description"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:visibility="invisible"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginRight="24dp"
        android:scaleType="centerCrop"
        android:id="@+id/share_button"
        android:src="@drawable/ic_action_share"
        android:background="@android:color/transparent"
        android:contentDescription="@string/select_button_button_description"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:gravity="center" >

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="centerCrop"
            android:id="@+id/edit_trimap_button"
            android:src="@drawable/ic_edit"
            android:background="@android:color/transparent"
            android:contentDescription="@string/select_button_button_description" />

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="centerCrop"
            android:cropToPadding="true"
            android:id="@+id/smudge_brush_button"
            android:src="@drawable/ic_image_layer_star"
            android:background="@android:color/transparent"
            android:contentDescription="@string/select_button_button_description" />

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="centerCrop"
            android:padding="1dp"
            android:cropToPadding="true"
            android:id="@+id/clear_brush_button"
            android:src="@drawable/ic_filter_none_white_48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/select_button_button_description" />

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="centerCrop"
            android:id="@+id/foreground_brush_button"
            android:src="@drawable/ic_flip_to_front_white_48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/select_button_button_description" />

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="centerCrop"
            android:id="@+id/background_brush_button"
            android:src="@drawable/ic_flip_to_back_white_48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/select_button_button_description" />
    </LinearLayout>



</RelativeLayout>
